# beryl

./: .gdbinit  .gitignore  .lldbinit  Cargo.toml  LICENSE  README.md  build.rs
docs/: book.toml
docs/pages/: SUMMARY.md  introduction.md
docs/pages/dev/: debugging.md  index.md
kernel/: Cargo.toml
kernel/src/: main.rs
sdk/libc/src/: lib.rs
sdk/stdc/: Cargo.toml
src/apps/hello-world/src/: main.rs
src/drivers/kframebuffer/: Cargo.toml
src/drivers/kframebuffer/src/: lib.rs
src/kernel/: Cargo.toml  build.rs  limine.cfg  linker.x86_64-elf.ld
src/kernel/src/: main.rs
src/kernel/src/arch/: mod.rs
src/kernel/src/arch/aarch64/: mod.rs
src/kernel/src/arch/aarch64/hal/: mod.rs  serial.rs  spin.rs
src/kernel/src/arch/x86_64/: gdt.rs  idt.rs  mod.rs  start.rs
src/kernel/src/arch/x86_64/hal/: mod.rs  serial.rs  spin.rs
src/kernel/src/boot/: mod.rs  x86_64.rs
src/kernel/src/drivers/: kframebuffer.rs  klog.rs  kserial.rs  mod.rs
src/kernel/src/hal/: interrupts.rs  mod.rs  spin.rs
src/kernel/src/hal/x86_64/: interrupts.rs  mod.rs
src/kernel/src/memory/: mod.rs  physical.rs
src/kernel/src/utility/: kmutex.rs  konce.rs  mod.rs
src/libs/ksupport/: Cargo.toml
src/libs/ksupport/src/: lib.rs  spin_once.rs  xorshift128p.rs  xoshiro256ss.rs
src/libs/ksupport/src/sync/: basic_mutex.rs  mod.rs  spin_mutex.rs
tools/beryl-bootimage-aarch64/: Cargo.toml  build.rs
tools/beryl-bootimage-x86_64/: Cargo.toml  build.rs
tools/beryl-bootimage-x86_64/src/: main.rs
tools/beryl-post-build/: main.rs
tools/beryl-qemu-x86_64-bios/: main.rs
tools/beryl-qemu-x86_64-uefi/: main.rs
tools/beryl-qemu-x86_64-uefi-debug/: main.rs
tools/bootimage-aarch64/: main.rs
tools/bootimage-x86_64/: main.rs
tools/qemu-x86_64-bios/: main.rs
tools/qemu-x86_64-debuggable/: main.rs
tools/qemu-x86_64-uefi/: main.rs
tools/qemu-x86_64-uefi-debuggable/: main.rs
