[package]
name = "beryl"
version = "0.1.0"
edition = "2021"
authors = ["Evan Cox <evanacox00@gmail.com>"]
description = "A toy operating system"

[workspace]
resolver = "2"
members = [
    "sdk/stdc",
    "src/apps/hello-world",
    "src/kernel",
    "src/libs/ksupport",
    "tools/beryl-bootimage-x86_64",
    "tools/beryl-bootimage-aarch64",
]

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[[bin]]
name = "beryl-qemu-x86_64-bios"
path = "tools/beryl-qemu-x86_64-bios/main.rs"

[[bin]]
name = "beryl-qemu-x86_64-uefi"
path = "tools/beryl-qemu-x86_64-uefi/main.rs"

[[bin]]
name = "beryl-qemu-x86_64-uefi-debug"
path = "tools/beryl-qemu-x86_64-uefi-debug/main.rs"