[package]
name = "beryl"
version = "0.1.0"
edition = "2021"
authors = ["Evan Cox <evanacox00@gmail.com>"]
description = "A toy operating system"

[workspace]
resolver = "2"
members = [
    "sdk/libc",
    "src/apps/hello-world",
    "src/kernel",
    "src/libs/ksupport",
]

[dependencies]
bpaf = "0.9.5"
ovmf-prebuilt = "0.1.0-alpha.1"

[profile.release-with-debug]
inherits = "release"
debug = true

[[bin]]
name = "qemu-x86_64-bios"
path = "tools/qemu-x86_64-bios/main.rs"

[[bin]]
name = "qemu-x86_64-uefi"
path = "tools/qemu-x86_64-uefi/main.rs"

[[bin]]
name = "qemu-x86_64-debuggable"
path = "tools/qemu-x86_64-debuggable/main.rs"

[[bin]]
name = "bootimage-x86_64"
path = "tools/bootimage-x86_64/main.rs"

[[bin]]
name = "bootimage-aarch64"
path = "tools/bootimage-aarch64/main.rs"